01-backend-apis/customer-api/deployment/kubernetes/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novacrest-customer-service
  labels:
    app: novacrest-customer-api
spec:
  type: ClusterIP
  selector:
    app: novacrest-customer-api
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
